--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
                         Started my internship with a heart sensor project.
                     </li>
                     <li>
-                        Researched and purchased a number of ECG and PPG sensors for testing. Decided on the best over a range of metrics, this was the PulseSensor PPG due to the quality of it's results and the better fit a PPG sensor had for the project.
+                        Researched and purchased a number of ECG and PPG sensors for testing. Decided on the best over a range of metrics.
 
                     </li>
                     <li>
-                        Once the PulseSensor was selected I worked in C++ to get the heartrate after this I worked in Python on Pycharm to develop a breathing rate algorithm.
+                        Once the sensor was selected I worked in C++ to get the heartrate, then I worked in Python on Pycharm to develop a breathing rate algorithm.
 
                     </li>
                     <li>
