--- a/index.html
+++ b/index.html
@@ -100,10 +100,8 @@
             <div data-date="June 2020 – Present">
                 <h3>Kouo Ltd</h3>
                 <h4>Hardware Engineer</h4>
+		<h4>Heart sensor project<h4>    
                 <ul>
-                    <li>
-                        Started my internship with a heart sensor project.
-                    </li>
                     <li>
                         Researched and purchased a number of ECG and PPG sensors for testing. Decided on the best over a range of metrics.
 
@@ -116,6 +114,20 @@
                         By the end of the summer I had integrated the sensor into Kouo's existing hardware.
                     </li>
                 </ul>
+		<h4>Sweat sensor project<h4>    
+                <ul>
+                    <li>
+                        Similarly to the previous project I researched and purchased a number of sweat detecting sensors.
+                    </li>
+                    <li>
+                        All the sensors were tested on a number of metrics such as sensitivity, to test them I recorded their response whilst relaxing and also whilst sweating.
+
+                    </li>
+                    <li>
+                        I collated the results of the project into a report.
+
+                    </li>
+                </ul>	
             </div>
 
             <div data-date="August 2015 – December 2015">
