--- a/index.html
+++ b/index.html
@@ -127,90 +127,51 @@
                         I collated the results of the project into a report.
 
                     </li>
+                </ul>
+		<h4>Material testing<h4>    
+                <ul>
+                    <li>
+                        I tested a number of materials to observe their efficacy as EEG electrodes. To carry out this testing I used a wavegenerator to simulate the EEG signal the brain would emit and amplified the signal after it had passed through the material undertest so it could be observed.
+                    </li>
+                    <li>
+                        All the materials were tested on a number of metrics such as frequency response and amplitude.
+
+                    </li>
+                    <li>
+                        I collated the results of the project into a report.
+
+                    </li>
                 </ul>	
             </div>
 
-            <div data-date="August 2015 – December 2015">
-                <h3>IPSO	Alliance	Laundry	Systems</h3>
-                <h4>Suppor Engineer</h4>
-                <ul>
-                    <li>
-                        Handled	in-store	circuit	board	repairs and	modifications
-                    </li>
-                    <li>
-                        Worked	as		part	of	the	Service	and	Technical	support	team	with	other	3	engineers	
-                    </li>
-                    <li>
-                        Gained	useful	insight	into	Industrial	Circuit	Design	Methods
-                    </li>
-                </ul>
-            </div>
-
-            <div data-date="September 2015 – September 2016">
-                <h3>Horeal	Expo	Group</h3>
-                <h4>IT	support	and	database	management </h4>
-                <ul>
-                    <li>
-                        Designed	a	ticket	entry	system	using	pre-generated	unique	random	ID
-                    </li>
-                    <li>
-                        Used	the	database	to	generate	targeted	advertising
-                    </li>
-                    <li>
-                        Created	entry/log	system	for	validating	ticket entries to	track	conversion	rates	of	the	targeted	advertising
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
+            
     <!-- End #experience -->
 
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>Imperial College London</h3>
-            <span class="education-date">Sept 2014 - June 2019</span>
+            <span class="education-date">Sept 2018 - Present</span>
             <h4>MEng Electrical Electronic Engineering</h4>
             <ul>
-
                 <li>
-                    4th year: Pattern Recognition, Digitial Image Processing, Optimisation, Deep Learning
-                </li>
-                <li>
-                    Final Year Project: Traffic Anomaly Detection using Microscopic Traffic Variables
-                </li>
-                <li>
-                    3rd	Year:	Linear Algebra, Digital Signal Processing, Biomedical Electronics, Introduction to machine Learning, Advanced Signal Processing, Embedded Systems
+                    3rd	Year:	Mathematics for Signals and Systems, Analogue Intergrated Signals and Systems, Biomedical Electronics, High Level Programming, Electrical Energy Systems, Embedded Systems
                 </li>
                 <li>
                     2nd	Year:	Advanced	Digital	and	Analogue	electronics,	Mathematics,	Signals	and	
-                    Communications,	Fields	and	Devices,	Power	Electronics,	Control	Engineering
-                </li>
-                <li>
-                    Introduction	to	Management	course:	Pass	with	Distinction	
-
-                </li>
-                
+                    Linear Systems,	Fields, Algorithms and Complexity	,	Power	Electronics,	Control	Engineering
+                </li>                
             </ul>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>St. Clare's Oxford</h3>
-            <span class="education-date">Sept 2012 - May 2014</span>
-            <h4>International Baccalaurate</h4>
+            <h3>Woodhouse College</h3>
+            <span class="education-date">Sept 2015 - May 2017</span>
+            <h4>A-levels</h4>
             <ul>
                 <li>
-                    IB	diploma: 40	Points
-                </li>
-                <li>
-                    Higher	Level: Mathematics, Economics, Physics
-                </li>
-                <li>
-                    Standard	level: Chemistry,	English	B,	Albanian	A1
-                </li>
-                <li>
-                    Received	an	Academic	Scholarship (90%	of	boarding	and	tuition	fees) (2012-2014)
+                    A-level: Mathematics(A*), Chemistry(A*), Physics(A)
                 </li>
             </ul>
         </div>
