--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h2 class="heading">Who Am I</h2>
-                    <img class="img" src="images/profile.jpg" style="
+                    <img class="img" src="images/profile.jpeg" style="
                             max-width: 80%;
                             height: auto;
                             align-self:center; 
@@ -144,7 +144,7 @@
                 </ul>	
             </div>
 	</div>
-	</div>		
+     </div>		
 
             
     <!-- End #experience -->
@@ -191,13 +191,13 @@
                     </div>
                     <!-- This logo is tradermarked Schlumbger Ltd and copyright protected -->
                     <div class="project-info">
-                        <h3>Omega SFM Development </h3>
+                        <h3>EE Rover </h3>
                         <p>
-                            As part of my 3rd Year Placement I worked as a Software Engineer for WesternGeco, a subsidiary of 
-                            Schlumberger LTD group, a company which specializes in oilfield services with offices in Gatwick. 
-                            I was assigned to the REMS (Research, Engineering, Manufacturing, and Sustaining) team, composed of 
-                            software developers and geophysicists responsible for the development and maintenance of a Geophysics Data 
-                            Processing software called Omega.
+                            - A group project where the task was to build a rover with a range of sensors to identify a number of lizards based on the signals
+				they outputted.
+			    - Responsibilities included motor circuit and EM wave sensor. Leading on developing sensory approach and motor integration
+				developed project management skills.
+                            - Improved technical skills
 
                         </p>
                         <a href="interim-report.pdf">View Interim Report</a>
