--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@
                     <div class="project-info">
                         <h3>EE Rover </h3>
                         <p>
-                           	 - A group project where the task was to build a rover with a range of sensors to identify a number of lizards based on the signals
+                           	 * A group project where the task was to build a rover with a range of sensors to identify a number of lizards based on the signals
 				they outputted.
 			   
-				- Responsibilities included motor circuit and EM wave sensor. Leading on developing sensory approach and motor integration
+				* Responsibilities included motor circuit and EM wave sensor. Leading on developing sensory approach and motor integration
 				developed project management skills.
                            
-				- Improved technical skills
+				* Improved technical skills
 
                         </p>
                         <a href="interim-report.pdf">View Interim Report</a>
