--- a/index.html
+++ b/index.html
@@ -192,16 +192,16 @@
                     <!-- This logo is tradermarked Schlumbger Ltd and copyright protected -->
                     <div class="project-info">
                         <h3>EE Rover </h3>
-                        <p>
-                           	 * A group project where the task was to build a rover with a range of sensors to identify a number of lizards based on the signals
-				they outputted.
+                        <ul>
+                           	 <li>A group project where the task was to build a rover with a range of sensors to identify a number of lizards based on the signals
+					 they outputted.</li>
 			   
-				* Responsibilities included motor circuit and EM wave sensor. Leading on developing sensory approach and motor integration
-				developed project management skills.
+				<li>Responsibilities included motor circuit and EM wave sensor. Leading on developing sensory approach and motor integration
+				developed project management skills.</li>
                            
-				* Improved technical skills
+				<li>Improved technical skills.</li>
 
-                        </p>
+                        </ul>
                         <a href="interim-report.pdf">View Interim Report</a>
                     </div>
                     <!-- End .project-info -->
