--- a/index.html
+++ b/index.html
@@ -192,16 +192,11 @@
                     <!-- This logo is tradermarked Schlumbger Ltd and copyright protected -->
                     <div class="project-info">
                         <h3>EE Rover </h3>
-                        <ul>
-                           	 <li>A group project where the task was to build a rover with a range of sensors to identify a number of lizards based on the signals
-					 they outputted.</li>
-			   
-				<li>Responsibilities included motor circuit and EM wave sensor. Leading on developing sensory approach and motor integration
-				developed project management skills.</li>
-                           
-				<li>Improved technical skills.</li>
+                        <p> The final project of my first year was to build a rover with a range of sensors to identify a number of lizards based on the signals
+					 they outputted. The signals outputted included infrared, radio and magnetic. My responsibilities included the motor circuit and EM wave sensor. Leading on developing sensory approach and motor integration
+				helped me to develope project management skills. I also improved my technical skills.
 
-                        </ul>
+                        </p>
                         <a href="interim-report.pdf">View Interim Report</a>
                     </div>
                     <!-- End .project-info -->
