--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/omega.png" />
+                        <img src="images/rover.png" />
                     </div>
-                    <!-- This logo is tradermarked Schlumbger Ltd and copyright protected -->
+                    
                     <div class="project-info">
                         <h3>EE Rover </h3>
                         <p> The final project of my first year was to build a rover with a range of sensors to identify a number of lizards based on the signals
@@ -204,7 +204,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/wine.jpg" />
+                        <img src="images/pillogo.jpg" />
                     </div>
                      <!-- Image may be subject to copyright. No copyright infregement indendent -->
                     <div class="project-info">
@@ -221,7 +221,7 @@
                 <!-- End .project -->
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/swim.jpg" />
+                        <img src="images/logicgates.jpg" />
                     </div>
                     <!-- Image may be subject to copyright. No copyright infregement indendent -->
                     <div class="project-info">
