--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/rover.png" />
+                        <img src="images/rover.png" width="500" height="600"/>
                     </div>
                     
                     <div class="project-info">
@@ -221,7 +221,7 @@
                 <!-- End .project -->
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/logicgates.png" />
+                        <img src="images/logicgates.png" width="500" height="600"/>
                     </div>
                     <!-- Image may be subject to copyright. No copyright infregement indendent -->
                     <div class="project-info">
