--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/pillogo.png" />
+                        <img src="images/pillogo.png" width="275" height="250"/>
                     </div>
                      <!-- Image may be subject to copyright. No copyright infregement indendent -->
                     <div class="project-info">
@@ -221,7 +221,7 @@
                 <!-- End .project -->
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/logicgates.png" width="500" height="600"/>
+                        <img src="images/logicgates.png" width="275" height="250"/>
                     </div>
                     <!-- Image may be subject to copyright. No copyright infregement indendent -->
                     <div class="project-info">
