--- a/index.html
+++ b/index.html
@@ -197,7 +197,6 @@
 				helped me to develope project management skills. I also improved my technical skills.
 
                         </p>
-                        <a href="interim-report.pdf">View Interim Report</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -210,11 +209,10 @@
                     <div class="project-info">
                         <h3>Pill dispenser project </h3>
                         <p> At the end of my second year I had a group project in which we were asked to solve a socioeconomic problem, my group chose ’poorly followed prescriptions’.
-				Our idea was to build a device along with an app that would help people to follow their prescriptions with features such as highlighting medications that shouldn't be taken together.
+				We built a device alongside an app that would help people to follow their prescriptions with features such as highlighting medications that shouldn't be taken together.
 				I designed and tested the ultrasound sensor system through which developing debugging skills.
 			    I also worked on code for the motors used for dispensing this improved my C++ coding skills.
-                        </p>
-                        <a href="wine.pdf">View Project Report</a>
+                        </p
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -230,7 +228,6 @@
                               electronics. I coded the symbols and the positioning of their ports, I developed integration skills through working in a team. I developed FSharp coding skills writing code throughout the project.
 
                         </p>
-                        <a href="https://swimtime.github.io/">View Project Website</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
