--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <!-- End .project -->
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/charge2.PNG" style="padding-bottom: 59px; " />
+                        <img src="images/minexx.PNG" style="padding-bottom: 59px; " />
                     </div>
                      <!-- Logo developed by our group. -->
                     <div class="project-info">
@@ -249,7 +249,7 @@
                            I worked on our leaflet and presentation outlining Minexx’s work and our part within it. This helped me to develope marketing and pitching skills.
                            I also worked on the code of the website, in turn improving my HTML and CSS coding skills.
                         </p>
-                        <a href="charge.pdf">View Project Report</a>
+                        <a href="https://minexx.codes/">View Project website</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
