--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <!-- End .project -->
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/minexx.PNG" style="padding-bottom: 59px; " />
+                        <img src="images/minexx.png" width="275" height="250" " />
                     </div>
                      <!-- Logo developed by our group. -->
                     <div class="project-info">
