--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
                     </li>
                     <li>
-                        I collated the results of the project into a report.
+                        I collated the results of the project into a <a href= "https://docs.google.com/document/d/19Va1xgvwZLZpiDVD90KyhEG9gst_obqZaLarCeUz1dc/edit?usp=sharing">report</a>.
 
                     </li>
                 </ul>
