--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
                     </li>
                     <li>
-                        I collated the results of the project into a report.
+                        I collated the results of the project into a <a href= "https://docs.google.com/document/d/13wQYO8tn66pRqsRoqSwlIFR6je15Iw4th_qoIHR37H8/edit?usp=sharing">report</a>.
 
                     </li>
                 </ul>	
