--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <p style="margin-top: 20%">
                         I am a Third year Electrical & Electronic Engineering student pursuing an MEng degree at Imperial College London. Throughout my years at Imperial College I have been involved in various projects and an internship, more details of which
                         can be found on the Experience/Projects sections below. My fields of interest are mainly 
-                        biomedical hardware development and front-end software development </p><p> This Portfolio is created in order to give an overview of my academic and professional career and it serves as an extension to my CV.
+                        biomedical hardware development and front-end software development. </p><p> This Portfolio is created in order to give an overview of my academic and professional career and it serves as an extension to my CV.
                     </p>
                 </div>
             </div>
